First pass of config file changes -- too numerous to list

--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -17,7 +17,7 @@ battery {
 
 client {
     # Possible Values: AE, MJ, EU, WA, RF, MK
-    S:PowerUnit=AE
+    S:PowerUnit=WA
 
     # Possible Values: AUTOSEARCH, MANUAL_SEARCH, NEI_AUTOSEARCH, NEI_MANUAL_SEARCH
     S:SEARCH_MODE=AUTOSEARCH
