--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -7,7 +7,7 @@ blocks {
     B:ChandelierEnabled=true
     B:CobblestoneComprEnabled=true
     B:ColorBlockDataEnabled=true
-    B:ConveyorEnabled=true
+    B:ConveyorEnabled=false
     B:CursedEarthEnabled=true
     B:CurtainEnabled=true
     B:Decorative_1Enabled=true
@@ -24,7 +24,7 @@ blocks {
     B:Generator8Enabled=true
     B:GeneratorEnabled=true
     B:GreenScreenEnabled=true
-    B:MagnumTorchEnabled=true
+    B:MagnumTorchEnabled=false
     B:PeacefultableEnabled=true
     B:PortalEnabled=true
     B:PureLoveBlockEnabled=true
@@ -49,13 +49,13 @@ client_options {
 
 
 "ender quarry power" {
-    I:baseDrain=1800
-    I:hardnessDrain=200
+    I:baseDrain=2200
+    I:hardnessDrain=300
 }
 
 
 items {
-    B:AngelRingEnabled=true
+    B:AngelRingEnabled=false
     B:BedrockiumIngotEnabled=true
     B:BuildersWandEnabled=true
     B:CreativeBuildersWandEnabled=true
@@ -123,7 +123,7 @@ recipes {
     B:disableDestructionPickaxeRecipe=false
     B:disableDivisionSiginInChests=false
     B:disableDrumRecipe=false
-    B:disableEnderLiliesInDungeons=false
+    B:disableEnderLiliesInDungeons=true
     B:disableEnderQuarryUpgradesRecipes=false
     B:disableEnderThermicPumpRecipe=false
     B:disableEnergyExtractionPipeRecipe=false
@@ -144,7 +144,7 @@ recipes {
     B:disablePaintbrushRecipe=false
     B:disablePeacefulTableRecipe=false
     B:disablePeacefulWitherRecipe=false
-    B:disableQEDIngotSmeltRecipes=false
+    B:disableQEDIngotSmeltRecipes=true
     B:disableRainMufflerRecipe=false
     B:disableRationingPipeRecipe=false
     B:disableRedstoneClockRecipe=false
