--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -107,7 +107,7 @@ debug {
 
 harvestleveltweaks {
     # Changes the Diamond and Emerald modifier: Apply it to a bronze level tool to obtain diamond level. Required unless you have steel or similar. [default: true]
-    B:diamondRequired=true
+    B:diamondRequired=false
 
     # Change durability of all tool materials (in percent) [range: 1 ~ 999, default: 80]
     I:durabilityPercentage=80
@@ -274,7 +274,7 @@ tweaks {
     B:addFlintRecipe=true
 
     # Allows toolparts to be used as material in the Part Builder. Like, turn a Pick head into a Shovel head.! [default: true]
-    B:allowPartReuse=true
+    B:allowPartReuse=false
 
     # Allows to use stencils as blank patterns in the stencil table [default: false]
     B:allowStencilReuse=false
@@ -289,13 +289,13 @@ tweaks {
     B:disableBonusModifierModifiers=false
 
     # Makes all non-TConstruct bows useless. You suddenly forgot how to use a bow. [default: false]
-    B:disableRegularBows=false
+    B:disableRegularBows=true
 
     # Makes all non-TConstruct hoes to not be able to hoe ground. Use the Mattock. [default: false]
-    B:disableRegularHoes=false
+    B:disableRegularHoes=true
 
     # Makes all non-TConstruct swords useless. Like whacking enemies with a stick. [default: false]
-    B:disableRegularSwords=false
+    B:disableRegularSwords=true
 
     # Makes all non-TConstruct tools mine nothing [default: true]
     B:disableRegularTools=true
@@ -313,7 +313,7 @@ tweaks {
     B:easyToolBuildingForge=false
 
     # Allows to repair your tool in a crafting grid, without tool station [default: true]
-    B:easyToolRepair=true
+    B:easyToolRepair=false
 
     # How many gravel are required to craft one Flint [range: 1 ~ 9, default: 3]
     I:gravelPerFlint=3
@@ -322,7 +322,7 @@ tweaks {
     B:moreExpensiveSilkyCloth=true
 
     # Silky Jewel needs an emerald block, instead of one emerald [default: false]
-    B:moreExpensiveSilkyJewel=false
+    B:moreExpensiveSilkyJewel=true
 
     # Flux modifier requires 2 Modifiers. Because that stuff is broken. [default: true]
     B:moreModifiersForFlux=true
