--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -73,7 +73,7 @@ settings {
     D:BloodMoonChance=0.05
 
     # Whether players are NOT allowed to sleep during a bloodmoon
-    B:BloodMoonNoSleep=true
+    B:BloodMoonNoSleep=false
 
     # Whether light will be tinted red on a Bloodmoon
     B:BloodMoonRedLight=true
@@ -94,13 +94,13 @@ settings {
     I:BloodMoonSpawnSpeed=3
 
     # Whether players in the overworld should receive a message at the beginning of the bloodmoon
-    B:BloodmoonMessage=true
+    B:BloodmoonMessage=false
 
     # Whether the Bloodmoon should respect the doMobSpawning gamerule
     B:BloodmoonRespectGamerule=true
 
     # Should monsters spawned by a bloodmoon vanish at dawn?
-    B:BloodmoonVanish=false
+    B:BloodmoonVanish=true
 
     # Bonemeal particles will appear whenever fertilized dirt boosts the plant
     B:FertilizedDirtGrowthIndicator=false
