--- a/config/RefinedRelocation.cfg
+++ b/config/RefinedRelocation.cfg
@@ -5,7 +5,7 @@ general {
     B:"Check Version"=true
 
     # Remove crafting recipe for Player Relocator.
-    B:"Disable PR"=false
+    B:"Disable PR"=true
 
     # Remove crafting recipe for Wireless Block Extender.
     B:"Disable WBE"=false
