--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -52,7 +52,7 @@
     B:"Allow EMP"=true
     B:"Allow Frames to move Machines (May cause corruption)"=false
     B:"Allow Gravel Gun PvP"=true
-    B:"Allow RC steel to be used in other mods"=false
+    B:"Allow RC steel to be used in other mods"=true
     B:"Allow TNT Cannon"=true
     I:"Bait Box Range"=128
     B:"Block Damage from Destructive Machines"=true
@@ -78,11 +78,11 @@
     B:"Force Inter-Mod Ore Compatibility"=true
     B:"GPR Renders Ores"=true
     B:"Hard Mode EU Compatibility"=false
-    B:"Hardmode Gravel Gun"=false
+    B:"Hardmode Gravel Gun"=true
     B:"Instant Woodcutter"=true
     D:"Iron Ore Density"=1.0
     B:"Item Pump Spills Items If Dumping To Air"=true
-    B:"Jetpack Requires Jet Fuel"=false
+    B:"Jetpack Requires Jet Fuel"=true
     B:"Jetpack bypasses allow-flight property"=true
     I:"Liquid Spiller Range, Use Zero to Disable"=16
     B:"Lock enchants on bedrock tools"=true
