--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -32,7 +32,7 @@ general {
      >
 
     # Can oil burn?
-    B:burnOil=true
+    B:burnOil=false
 
     # The multiplier for chipset recipe cost. [range: 0.001 ~ 1000.0, default: 1.0]
     S:chipset.costMultiplier=1.0
@@ -142,6 +142,7 @@ general {
     S:oil.increasedBiomeIDs <
         SANDY
         Taiga
+        OCEAN
      >
 
     # Probability of oil well generation
