--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -230,7 +230,7 @@
     I:darkSteelUpgradePowerTwoCost=15
 
     # Number of levels required for the 'Empowered.
-    I:darkSteelUpgradeVibrantCost=10
+    I:darkSteelUpgradeVibrantCost=20
 
     # Amount of power stored (RF) per block walked when wearing the dark steel boots.
     I:darkSteelWalkPowerCost=83
@@ -773,13 +773,13 @@ rail {
     B:useAlternateBinderRecipe=false
 
     # When enabled machines cost significantly more.
-    B:useHardRecipes=false
+    B:useHardRecipes=true
 
     # If true copper and tin will be used in recipes when registered in the ore dictionary
     B:useModMetals=true
 
     # When enabled machine chassis will require steel instead of iron.
-    B:useSteelInChassi=false
+    B:useSteelInChassi=true
 }
 
 
