--- a/config/progressiveautomation.cfg
+++ b/config/progressiveautomation.cfg
@@ -35,7 +35,7 @@ general {
     B:coalPellets=true
 
     # Set to false to disable RF support in this mod [default: true]
-    B:enableRF=true
+    B:enableRF=false
 
     # Number to divide the normal burn time by for all machines. [range: 1 ~ 300, default: 2]
     I:fuelCost=2
