--- a/config/roguelike_dungeons/roguelike.cfg
+++ b/config/roguelike_dungeons/roguelike.cfg
@@ -5,6 +5,6 @@ spawnFrequency=10
 preciousBlocks=true
 dimensionBL=
 levelScatter=10
-generous=true
+generous=false
 doNaturalSpawn=true
 looting=0.085
