--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -17,13 +17,13 @@ general {
     B:chargeAnimation.enabled=true
 
     # Set to false to disable the Smokey Quartz blocks. This config option is here for those using Thaumic Tinkerer
-    B:darkQuartz.enabled=true
+    B:darkQuartz.enabled=false
 
     # Set to false to disable the particles in the elven portal.
     B:elfPortal.particles.enabled=true
 
     # Set to false to disable the ability for the Hand of Ender to pickpocket other players' ender chests.
-    B:enderPickpocket.enabled=true
+    B:enderPickpocket.enabled=false
 
     # Set to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
     B:fallenKanade.enabled=true
@@ -56,7 +56,7 @@ general {
     I:passiveWither.time=-1
 
     # Set to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
-    B:powerSystem.subtle=false
+    B:powerSystem.subtle=true
 
     # Set to true to use the old (non-.obj, pre beta18) pylon model
     B:pylonModel.old=false
