--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -7,7 +7,7 @@ achievements {
 
 "difficulty changes" {
     B:"Add alternative recipe for bolt parts: arrowhead + toolrod in a crafting grid"=false
-    B:"Allow creation of endstone"=true
+    B:"Allow creation of endstone"=false
     B:"Balanced Flux Modifier"=true
     B:"Craft metals with Wood Patterns"=false
     B:"Craft vanilla metal blocks"=true
@@ -168,21 +168,21 @@ worldgen {
 "worldgen disabler" {
     B:"Add Village Generation"=true
     B:"Enable the Tinkers Villager to trade for oreberries"=true
-    B:"Generate Aluminum"=true
-    B:"Generate Aluminum Bushes"=true
+    B:"Generate Aluminum"=false
+    B:"Generate Aluminum Bushes"=false
     B:"Generate Cobalt and Ardite"=true
-    B:"Generate Copper"=true
-    B:"Generate Copper Bushes"=true
+    B:"Generate Copper"=false
+    B:"Generate Copper Bushes"=false
     B:"Generate Essence Bushes"=true
-    B:"Generate Gold Bushes"=true
-    B:"Generate Iron Bushes"=true
-    B:"Generate Surface Aluminum"=true
-    B:"Generate Surface Copper"=true
-    B:"Generate Surface Gold"=true
-    B:"Generate Surface Iron"=true
-    B:"Generate Surface Tin"=true
-    B:"Generate Tin"=true
-    B:"Generate Tin Bushes"=true
+    B:"Generate Gold Bushes"=false
+    B:"Generate Iron Bushes"=false
+    B:"Generate Surface Aluminum"=false
+    B:"Generate Surface Copper"=false
+    B:"Generate Surface Gold"=false
+    B:"Generate Surface Iron"=false
+    B:"Generate Surface Tin"=false
+    B:"Generate Tin"=false
+    B:"Generate Tin Bushes"=false
 }
 
 
