--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -152,19 +152,19 @@ loot {
     I:fuel.coal=20
     I:fuel.coke=20
     I:rail.part=20
-    I:steel.block=5
-    I:steel.ingot=10
+    I:steel.block=0
+    I:steel.ingot=0
     I:tie.stone=10
     I:tie.wood=20
     I:tool.crowbar=10
     I:tool.electric.meter=5
     I:tool.magnifying.glass=5
     I:tool.signal.tuner=5
-    I:tool.steel.axe=5
-    I:tool.steel.pickaxe=5
-    I:tool.steel.shears=5
-    I:tool.steel.shovel=5
-    I:tool.steel.sword=5
+    I:tool.steel.axe=0
+    I:tool.steel.pickaxe=0
+    I:tool.steel.shears=0
+    I:tool.steel.shovel=0
+    I:tool.steel.sword=0
     I:tool.surveyor=5
     I:track.basic=30
 }
@@ -547,15 +547,15 @@ worldgen {
 
     generate {
         B:abyssal=true
-        B:copper=true
+        B:copper=false
         B:firestone=true
-        B:gold=true
-        B:iron=true
+        B:gold=false
+        B:iron=false
         B:lead=true
         B:quarried=true
         B:saltpeter=true
         B:sulfur=true
-        B:tin=true
+        B:tin=false
         B:workshop=true
     }
 
