--- a/config/wailaplugins.cfg
+++ b/config/wailaplugins.cfg
@@ -27,22 +27,22 @@ plugins {
     B:Forestry=true
 
     # Should the plugin for the mod with modid 'Mekanism' be loaded
-    B:Mekanism=true
+    B:Mekanism=false
 
     # Should the plugin for the mod with modid 'Railcraft' be loaded
     B:Railcraft=true
 
     # Should the plugin for the mod with modid 'RedLogic' be loaded
-    B:RedLogic=true
+    B:RedLogic=false
 
     # Should the plugin for the mod with modid 'Steamcraft' be loaded
-    B:Steamcraft=true
+    B:Steamcraft=false
 
     # Should the plugin for the mod with modid 'harvestcraft' be loaded
-    B:harvestcraft=true
+    B:harvestcraft=false
 
     # Should the plugin for the mod with modid 'magicalcrops' be loaded
-    B:magicalcrops=true
+    B:magicalcrops=false
 }
 
 
