Fix biome IDs in twilight forest

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4317,7 +4317,9 @@ gardentrees {
     B:sapling.2=false
     B:thinlog=false
     B:thinlog.1=false
+    B:thinlog.1228=false
     B:thinlog.1232=false
+    B:thinlog.1244=false
     B:thinlog.1248=false
     B:thinlog.12699=false
     B:thinlog.12741=false
@@ -4325,7 +4327,9 @@ gardentrees {
     B:thinlog.12850=false
     B:thinlog.12851=false
     B:thinlog.12852=false
+    B:thinlog.13516=false
     B:thinlog.13520=false
+    B:thinlog.13532=false
     B:thinlog.13536=false
     B:thinlog.2=false
     B:thinlog.3=false
@@ -4345,7 +4349,9 @@ gardentrees {
     B:thinlog.4660=false
     B:thinlog.4881=false
     B:thinlog.5=false
+    B:thinlog.5324=false
     B:thinlog.5328=false
+    B:thinlog.5340=false
     B:thinlog.5344=false
     B:thinlog.561=false
     B:thinlog.562=false
@@ -4359,11 +4365,15 @@ gardentrees {
     B:thinlog.8754=false
     B:thinlog.8755=false
     B:thinlog.8756=false
+    B:thinlog.9420=false
     B:thinlog.9424=false
+    B:thinlog.9436=false
     B:thinlog.9440=false
     B:thinlogfence=false
     B:thinlogfence.1=false
+    B:thinlogfence.1228=false
     B:thinlogfence.1232=false
+    B:thinlogfence.1244=false
     B:thinlogfence.1248=false
     B:thinlogfence.12699=false
     B:thinlogfence.12741=false
@@ -4371,7 +4381,9 @@ gardentrees {
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
     B:thinlogfence.12852=false
+    B:thinlogfence.13516=false
     B:thinlogfence.13520=false
+    B:thinlogfence.13532=false
     B:thinlogfence.13536=false
     B:thinlogfence.2=false
     B:thinlogfence.3=false
@@ -4391,7 +4403,9 @@ gardentrees {
     B:thinlogfence.4660=false
     B:thinlogfence.4881=false
     B:thinlogfence.5=false
+    B:thinlogfence.5324=false
     B:thinlogfence.5328=false
+    B:thinlogfence.5340=false
     B:thinlogfence.5344=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
@@ -4405,7 +4419,9 @@ gardentrees {
     B:thinlogfence.8754=false
     B:thinlogfence.8755=false
     B:thinlogfence.8756=false
+    B:thinlogfence.9420=false
     B:thinlogfence.9424=false
+    B:thinlogfence.9436=false
     B:thinlogfence.9440=false
 }
 
