Fix ore generation for yellorite

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3330,6 +3330,7 @@ denseores {
     B:block0.5=true
     B:block0.6=true
     B:block0.7=true
+    B:block0.8=true
 }
 
 
@@ -4317,6 +4318,8 @@ gardentrees {
     B:sapling.2=false
     B:thinlog=false
     B:thinlog.1=false
+    B:thinlog.1111=false
+    B:thinlog.1127=false
     B:thinlog.1228=false
     B:thinlog.1232=false
     B:thinlog.1244=false
@@ -4327,6 +4330,8 @@ gardentrees {
     B:thinlog.12850=false
     B:thinlog.12851=false
     B:thinlog.12852=false
+    B:thinlog.13399=false
+    B:thinlog.13415=false
     B:thinlog.13516=false
     B:thinlog.13520=false
     B:thinlog.13532=false
@@ -4349,6 +4354,8 @@ gardentrees {
     B:thinlog.4660=false
     B:thinlog.4881=false
     B:thinlog.5=false
+    B:thinlog.5207=false
+    B:thinlog.5223=false
     B:thinlog.5324=false
     B:thinlog.5328=false
     B:thinlog.5340=false
@@ -4365,12 +4372,16 @@ gardentrees {
     B:thinlog.8754=false
     B:thinlog.8755=false
     B:thinlog.8756=false
+    B:thinlog.9303=false
+    B:thinlog.9319=false
     B:thinlog.9420=false
     B:thinlog.9424=false
     B:thinlog.9436=false
     B:thinlog.9440=false
     B:thinlogfence=false
     B:thinlogfence.1=false
+    B:thinlogfence.1111=false
+    B:thinlogfence.1127=false
     B:thinlogfence.1228=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
@@ -4381,6 +4392,8 @@ gardentrees {
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
     B:thinlogfence.12852=false
+    B:thinlogfence.13399=false
+    B:thinlogfence.13415=false
     B:thinlogfence.13516=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
@@ -4403,6 +4416,8 @@ gardentrees {
     B:thinlogfence.4660=false
     B:thinlogfence.4881=false
     B:thinlogfence.5=false
+    B:thinlogfence.5207=false
+    B:thinlogfence.5223=false
     B:thinlogfence.5324=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
@@ -4419,6 +4434,8 @@ gardentrees {
     B:thinlogfence.8754=false
     B:thinlogfence.8755=false
     B:thinlogfence.8756=false
+    B:thinlogfence.9303=false
+    B:thinlogfence.9319=false
     B:thinlogfence.9420=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
@@ -6069,6 +6086,7 @@ railcraft {
     B:detector=false
     B:firestonerecharge=false
     B:fluidcreosote=false
+    B:fluidsteam=false
     B:frame=false
     B:glass=true
     B:glass.1=true
