--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -59,25 +59,25 @@ general {
      >
 
     # If this is enabled, copper ore will generate on the overworld.
-    B:"Enable Copper Ore Gen"=true
+    B:"Enable Copper Ore Gen"=false
 
     # If this is enabled, tin ore will generate on the overworld.
-    B:"Enable Tin Ore Gen"=true
+    B:"Enable Tin Ore Gen"=false
 
     # If this is enabled, aluminum ore will generate on the overworld.
-    B:"Enable Aluminum Ore Gen"=true
+    B:"Enable Aluminum Ore Gen"=false
 
     # If this is enabled, silicon ore will generate on the overworld.
-    B:"Enable Silicon Ore Gen"=true
+    B:"Enable Silicon Ore Gen"=false
 
     # Disable Cheese Ore Gen on Moon.
     B:"Disable Cheese Ore Gen on Moon"=false
 
     # Disable Tin Ore Gen on Moon.
-    B:"Disable Tin Ore Gen on Moon"=false
+    B:"Disable Tin Ore Gen on Moon"=true
 
     # Disable Tin Ore Gen on Moon.
-    B:"Disable Copper Ore Gen on Moon"=false
+    B:"Disable Copper Ore Gen on Moon"=true
 
     # If true, moon villages will not generate.
     B:"Disable Moon Village Gen"=false
