--- a/config/denseores.cfg
+++ b/config/denseores.cfg
@@ -82,6 +82,16 @@ ores {
         S:underlyingBlock=netherrack
     }
 
+    block_8 {
+        S:baseBlock=BigReactors:YelloriteOre
+        I:baseBlockMeta=0
+        S:baseBlockTexture=bigreactors:oreYellorite
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        S:underlyingBlock=stone
+    }
+
 }
 
 
