Many config changes. Ore unification and tweaks. TInkers is now the starting mod.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1789,6 +1789,22 @@ botania {
     B:miniIsland.7=false
     B:miniIsland.8=false
     B:miniIsland.9=false
+    B:mushroom=false
+    B:mushroom.1=false
+    B:mushroom.10=false
+    B:mushroom.11=false
+    B:mushroom.12=false
+    B:mushroom.13=false
+    B:mushroom.14=false
+    B:mushroom.15=false
+    B:mushroom.2=false
+    B:mushroom.3=false
+    B:mushroom.4=false
+    B:mushroom.5=false
+    B:mushroom.6=false
+    B:mushroom.7=false
+    B:mushroom.8=false
+    B:mushroom.9=false
     B:openCrate=false
     B:openCrate.1=false
     B:petalBlock=true
@@ -2019,6 +2035,7 @@ buildcraftsilicon {
     B:laserTableBlock.1=false
     B:laserTableBlock.2=false
     B:laserTableBlock.3=false
+    B:laserTableBlock.4=false
     B:requester=false
     B:zonePlan=false
 }
@@ -4319,7 +4336,9 @@ gardentrees {
     B:thinlog=false
     B:thinlog.1=false
     B:thinlog.1111=false
+    B:thinlog.1112=false
     B:thinlog.1127=false
+    B:thinlog.1128=false
     B:thinlog.1228=false
     B:thinlog.1232=false
     B:thinlog.1244=false
@@ -4331,7 +4350,9 @@ gardentrees {
     B:thinlog.12851=false
     B:thinlog.12852=false
     B:thinlog.13399=false
+    B:thinlog.13400=false
     B:thinlog.13415=false
+    B:thinlog.13416=false
     B:thinlog.13516=false
     B:thinlog.13520=false
     B:thinlog.13532=false
@@ -4355,7 +4376,9 @@ gardentrees {
     B:thinlog.4881=false
     B:thinlog.5=false
     B:thinlog.5207=false
+    B:thinlog.5208=false
     B:thinlog.5223=false
+    B:thinlog.5224=false
     B:thinlog.5324=false
     B:thinlog.5328=false
     B:thinlog.5340=false
@@ -4373,7 +4396,9 @@ gardentrees {
     B:thinlog.8755=false
     B:thinlog.8756=false
     B:thinlog.9303=false
+    B:thinlog.9304=false
     B:thinlog.9319=false
+    B:thinlog.9320=false
     B:thinlog.9420=false
     B:thinlog.9424=false
     B:thinlog.9436=false
@@ -4381,7 +4406,9 @@ gardentrees {
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1111=false
+    B:thinlogfence.1112=false
     B:thinlogfence.1127=false
+    B:thinlogfence.1128=false
     B:thinlogfence.1228=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
@@ -4393,7 +4420,9 @@ gardentrees {
     B:thinlogfence.12851=false
     B:thinlogfence.12852=false
     B:thinlogfence.13399=false
+    B:thinlogfence.13400=false
     B:thinlogfence.13415=false
+    B:thinlogfence.13416=false
     B:thinlogfence.13516=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
@@ -4417,7 +4446,9 @@ gardentrees {
     B:thinlogfence.4881=false
     B:thinlogfence.5=false
     B:thinlogfence.5207=false
+    B:thinlogfence.5208=false
     B:thinlogfence.5223=false
+    B:thinlogfence.5224=false
     B:thinlogfence.5324=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
@@ -4435,7 +4466,9 @@ gardentrees {
     B:thinlogfence.8755=false
     B:thinlogfence.8756=false
     B:thinlogfence.9303=false
+    B:thinlogfence.9304=false
     B:thinlogfence.9319=false
+    B:thinlogfence.9320=false
     B:thinlogfence.9420=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
@@ -6436,6 +6469,28 @@ storagedrawers {
 }
 
 
+streams {
+    B:riverice00=false
+    B:riverice02=false
+    B:riverice12=false
+    B:riverice20=false
+    B:riverice21=false
+    B:riverice22=false
+    B:rivertilelava00=false
+    B:rivertilelava02=false
+    B:rivertilelava12=false
+    B:rivertilelava20=false
+    B:rivertilelava21=false
+    B:rivertilelava22=false
+    B:rivertilewater00=false
+    B:rivertilewater02=false
+    B:rivertilewater12=false
+    B:rivertilewater20=false
+    B:rivertilewater21=false
+    B:rivertilewater22=false
+}
+
+
 sync {
     B:SyncShellConstructor=false
 }
@@ -6892,6 +6947,38 @@ thaumictinkerer {
     B:repairer=false
     B:spawner=false
     B:warpGate=false
+}
+
+
+thermalfoundation {
+    B:FluidCoal=false
+    B:FluidCryotheum=false
+    B:FluidEnder=false
+    B:FluidGlowstone=false
+    B:FluidMana=false
+    B:FluidPyrotheum=false
+    B:FluidRedstone=false
+    B:FluidSteam=false
+    B:Ore=true
+    B:Ore.1=true
+    B:Ore.2=true
+    B:Ore.3=true
+    B:Ore.4=true
+    B:Ore.5=true
+    B:Ore.6=true
+    B:Storage=true
+    B:Storage.1=true
+    B:Storage.10=true
+    B:Storage.11=true
+    B:Storage.12=true
+    B:Storage.2=true
+    B:Storage.3=true
+    B:Storage.4=true
+    B:Storage.5=true
+    B:Storage.6=true
+    B:Storage.7=true
+    B:Storage.8=true
+    B:Storage.9=true
 }
 
 
