--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -37,6 +37,9 @@ general {
     # Set to true to use alternate flower textures by Futureazoo, not all flowers are textured. http://redd.it/2b3o3f
     B:flowerTextures.alt=false
 
+    # Set to true to enable justified text in the Lexica Botania's text pages.
+    B:lexicon.enable.justifiedText=false
+
     # Set to false to disable the rotating items in the petal and rune entries in the Lexica Botania.
     B:lexicon.enable.rotatingItems=true
 
@@ -45,6 +48,9 @@ general {
 
     # Set to false to disable the Mana Enchanter. Since some people find it OP or something. This only disables the entry and creation. Old ones that are already in the world will stay.
     B:manaEnchanter.enabled=true
+
+    # Set to false to disable the Mana Fluxfield (generates RF from mana). This only disables the entry and creation. Old ones that are already in the world will stay.
+    B:manaFluxfield.enabled=true
 
     # Set to true to disable the mana spreader shooting sound.
     B:manaSpreaders.silent=false
@@ -79,11 +85,14 @@ general {
     # Set to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old botania versions. Warning: Disabled by default because it may be laggy.
     B:wandBeam.static=false
 
-    # The density of each flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
+    # The density of each botania flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
     I:worldgen.flower.density=16
 
-    # The quanity of flower patches to generate in the world, defaults to 2, the lower the number the less patches geenrate.
+    # The quanity of botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
     I:worldgen.flower.quantity=2
+
+    # The quantity of botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
+    I:worldgen.mushroom.quantity=40
 }
 
 
