--- a/config/Reika/ElectriCraft.cfg
+++ b/config/Reika/ElectriCraft.cfg
@@ -6,12 +6,12 @@
 
 
 "ore control" {
-    B:ALUMINUM=true
-    B:COPPER=true
-    B:NICKEL=true
-    B:PLATINUM=true
-    B:SILVER=true
-    B:TIN=true
+    B:ALUMINUM=false
+    B:COPPER=false
+    B:NICKEL=false
+    B:PLATINUM=false
+    B:SILVER=false
+    B:TIN=false
 }
 
 
