--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -128,9 +128,9 @@ worldgen {
     I:"Aluminum Bush Min Y"=0
     I:"Aluminum Bush Rarity"=2
     I:"Aluminum Surface Rarity"=50
-    I:"Aluminum Underground Density"=3
+    I:"Aluminum Underground Density"=6
     I:"Aluminum Underground Max Y"=64
-    I:"Aluminum Underground Min Y"=0
+    I:"Aluminum Underground Min Y"=42
     I:"Cobalt Surface Rarity"=2000
     I:"Copper Bush Density"=2
     I:"Copper Bush Max Y"=60
@@ -168,7 +168,7 @@ worldgen {
 "worldgen disabler" {
     B:"Add Village Generation"=true
     B:"Enable the Tinkers Villager to trade for oreberries"=true
-    B:"Generate Aluminum"=false
+    B:"Generate Aluminum"=true
     B:"Generate Aluminum Bushes"=false
     B:"Generate Cobalt and Ardite"=true
     B:"Generate Copper"=false
