--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -32,7 +32,7 @@
     B:"Fission Cores Chunkload When Active"=true
     B:"Generate Calcite Ore Even If Other Mods Do"=true
     B:"Generate Magnetite Ore Even If Other Mods Do"=true
-    B:"Generate Silver Ore Even If Other Mods Do"=true
+    B:"Generate Silver Ore Even If Other Mods Do"=false
     I:"Ore Density Percentage"=100
     B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
