--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 compat {
+    # Minefactory Reloaded integration. [default: true]
+    B:enableMFR=true
+
     # NEI recipe and ledger integration. [default: true]
     B:enableNEI=true
 }
