--- a/config/powercrystals/minefactoryreloaded/common.cfg
+++ b/config/powercrystals/minefactoryreloaded/common.cfg
@@ -133,6 +133,9 @@ Machine {
         # The energy cost for this machine to complete one work cycle, in units of 10 RF (i.e., 2 DaRF = 20 RF)
         I:ActivationCostDaRF=24
         B:Recipe.Enabled=false
+
+        # If true, the harvester will skip scanning some bocks when filled with sludge
+        B:SkipWork=false
     }
 
     Rancher {
