Mod list stable; configuration changes for biome conflicts

--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sat Mar 07 22:27:38 MST 2015
+#Sat Mar 28 15:49:32 MDT 2015
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
