--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -9,6 +9,7 @@
 
 
 "control setup" {
+    B:"Allow Danger in Rainbow Forests"=false
     B:"Allow duplication wand to copy TileEntities"=false
     I:"Chest Generation Tier"=4
     B:"Crystal Plants May Drop Shards"=true
@@ -26,6 +27,7 @@
     I:"Guardian Stone Range"=16
     B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
+    I:"Lumen Relay Range"=16
     B:"Make ThaumCraft integration require ThaumCraft progression"=false
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
@@ -114,6 +116,7 @@
 "other ids" {
     I:"Dimension ID"=60
     I:"Growth Hormone ID"=36
+    I:"Regen ID"=39
     I:"Saturation ID"=38
 }
 
