--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -34,6 +34,7 @@
     B:"Generate Magnetite Ore Even If Other Mods Do"=true
     B:"Generate Silver Ore Even If Other Mods Do"=false
     I:"Ore Density Percentage"=100
+    I:"Ore Discretization"=1
     B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
     I:"Toroid Spark Delay"=4
