--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -17,6 +17,7 @@
     I:GPRENDPORTAL=24033
     I:GPRSPAWNER=24032
     I:GRAVELGUN=24029
+    I:INSANITY=24039
     I:JETCHICKEN=24018
     I:JETENGINE=24009
     I:JETFAIL=24019
@@ -54,6 +55,7 @@
     B:"Allow Gravel Gun PvP"=true
     B:"Allow RC steel to be used in other mods"=true
     B:"Allow TNT Cannon"=true
+    B:"Allow special bedrock tool abilities in automation"=true
     I:"Bait Box Range"=128
     B:"Block Damage from Destructive Machines"=true
     I:"Block Ram Range"=512
@@ -75,7 +77,7 @@
     B:"Extractor Drill Wears Down"=false
     I:"Fluid Flow Speed"=5
     B:"Force Gregtech Ore Compatibility"=true
-    B:"Force Inter-Mod Ore Compatibility"=true
+    B:"Force Inter-Mod Ore Compatibility"=false
     B:"GPR Renders Ores"=true
     B:"Hard Mode EU Compatibility"=false
     B:"Hardmode Gravel Gun"=true
@@ -101,6 +103,7 @@
     B:"Owner-Only Machine Use"=false
     D:"Pipe Block Hardness"=0.0
     I:"Player Detector Range"=128
+    I:"Power Converter Loss Percent"=0
     B:"Railgun Block Damage"=true
     B:"Reload Handbook Data on Open"=false
     B:"Render projector lines"=true
