--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1,97 +1,106 @@
 # Configuration file
 
 general {
-    # Set to false to disable rendering of baubles in the player.
+    # Set this to false to disable rendering of baubles in the player.
     B:baubleRender.enabled=true
 
-    # Set to false to remove the block breaking particles from the flowers and other items in the mod.
+    # Set this to false to remove the block breaking particles from the flowers and other items in the mod.
     B:blockBreakingParticles.enabled=true
 
-    # Set to false to remove the block breaking particles from the Mana Shatterer, as there can be a good amount in higher levels.
+    # Set this to false to remove the block breaking particles from the Mana Shatterer, as there can be a good amount in higher levels.
     B:blockBreakingParticlesTool.enabled=true
 
-    # Set to false to disable the wireframe when looking a block bound to something (spreaders, flowers, etc).
+    # Set this to false to disable the wireframe when looking a block bound to something (spreaders, flowers, etc).
     B:boundBlock.wireframe.enabled=true
 
-    # Set to false to disable the animation when an item is charging on top of a mana pool.
+    # Set this to false to disable the animation when an item is charging on top of a mana pool.
     B:chargeAnimation.enabled=true
 
-    # Set to false to disable the Smokey Quartz blocks. This config option is here for those using Thaumic Tinkerer
+    # Set this to false to disable the Smokey Quartz blocks. This config option is here for those using Thaumic Tinkerer
     B:darkQuartz.enabled=false
 
-    # Set to false to disable the particles in the elven portal.
+    # Set this to false to disable the particles in the elven portal.
     B:elfPortal.particles.enabled=true
 
     # Set to false to disable the ability for the Hand of Ender to pickpocket other players' ender chests.
     B:enderPickpocket.enabled=false
 
-    # Set to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
+    # Set this to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
     B:fallenKanade.enabled=true
 
-    # Turn off ONLY IF you're on an extremely large world with an exhagerated count of Mana Spreaders/Mana Pools and are experiencing TPS lag. This toggles whether flowers are strict with their checking for connecting to pools/spreaders or just check whenever possible.
+    # Turn this off ONLY IF you're on an extremely large world with an exaggerated count of Mana Spreaders/Mana Pools and are experiencing TPS lag. This toggles whether flowers are strict with their checking for connecting to pools/spreaders or just check whenever possible.
     B:flower.forceCheck=true
 
     # The frequency in which particles spawn from normal (worldgen) mystical flowers
     D:flowerParticles.frequency=0.75
 
-    # Set to true to use alternate flower textures by Futureazoo, not all flowers are textured. http://redd.it/2b3o3f
+    # Set this to true to use alternate flower textures by Futureazoo, not all flowers are textured. http://redd.it/2b3o3f
     B:flowerTextures.alt=false
 
-    # Set to true to enable justified text in the Lexica Botania's text pages.
+    # Set this to true to enable justified text in the Lexica Botania's text pages.
     B:lexicon.enable.justifiedText=false
 
-    # Set to false to disable the rotating items in the petal and rune entries in the Lexica Botania.
+    # Set this to false to disable the rotating items in the petal and rune entries in the Lexica Botania.
     B:lexicon.enable.rotatingItems=true
 
-    # Set to false to disabled the animated 3D render for the lexica botania
+    # Set this to false to disable the animated 3D render for the Lexica Botania.
     B:lexicon.render.3D=true
 
-    # Set to false to disable the Mana Enchanter. Since some people find it OP or something. This only disables the entry and creation. Old ones that are already in the world will stay.
+    # Set this to false to disable the Mana Enchanter. Since some people find it OP or something. This only disables the entry and creation. Old ones that are already in the world will stay.
     B:manaEnchanter.enabled=true
 
-    # Set to false to disable the Mana Fluxfield (generates RF from mana). This only disables the entry and creation. Old ones that are already in the world will stay.
+    # Set this to false to disable the Mana Fluxfield (generates RF from mana). This only disables the entry and creation. Old ones that are already in the world will stay.
     B:manaFluxfield.enabled=true
 
-    # Set to true to disable the mana spreader shooting sound.
+    # Set this to true to disable the mana spreader shooting sound.
     B:manaSpreaders.silent=false
 
-    # Set to true if you are the chosen one. For lovers of glitch art and just general mad people.
+    # Set this to true if you are the chosen one. For lovers of glitch art and just general mad people.
     B:matrixMode.enabled=false
 
-    # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 24000 is 2 minecraft days, that's a recomended value.
+    # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 24000 is 2 Minecraft days, that's a recomended value.
     I:passiveWither.time=-1
 
-    # Set to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
+    # Set this to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
     B:powerSystem.subtle=true
 
-    # Set to true to use the old (non-.obj, pre beta18) pylon model
+    # Set this to true to use the old (non-.obj, pre beta18) pylon model
     B:pylonModel.old=false
 
-    # Set to false to disable the references in flower tooltips. (You monster D:)
+    # Set this to false to disable the references in the flower tooltips. (You monster D:)
     B:references.enabled=true
 
-    # Set to false to disable the use of shaders for some of the mod's renders.
+    # Set this to false to disable the use of shaders for some of the mod's renders.
     B:shaders.enabled=true
 
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
 
-    # Set to false to always display all particles regardless of the "Particles" setting in the Vanilla options menu.
+    # Set this to false to always display all particles regardless of the "Particles" setting in the Vanilla options menu.
     B:vanillaParticleConfig.enabled=true
 
-    # Set to false to disable checking and alerting when new Botania versions come out.
+    # Set this to false to disable checking and alerting when new Botania versions come out.
     B:versionChecking.enabled=true
 
-    # Set to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old botania versions. Warning: Disabled by default because it may be laggy.
+    # Set this to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old Botania versions. Warning: Disabled by default because it may be laggy.
     B:wandBeam.static=false
 
-    # The density of each botania flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
+    # The density of each Botania flower patch generated, defaults to 16, the lower the number, the less each patch will have.
     I:worldgen.flower.density=16
 
-    # The quanity of botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
+    # The chance for a Botania flower patch to be generated. The higher this value is the less patches will exist and the more flower each will have.
+    I:worldgen.flower.patchChance=4
+
+    # The size of each Botania flower patch. The larger this is the farther the each patch can spread
+    I:worldgen.flower.patchSize=6
+
+    # The quantity of Botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
     I:worldgen.flower.quantity=2
 
-    # The quantity of botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
+    # The chance for a Botania flower generated in a patch to be a tall flowe. 0.1 is 10%, 1 is 100%.
+    D:worldgen.flower.tallChance=0.1
+
+    # The quantity of Botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
     I:worldgen.mushroom.quantity=40
 }
 
@@ -172,6 +181,12 @@ shedding {
     I:"Botania.botania:doppleganger.metadata"=0
     I:"Botania.botania:doppleganger.rate"=-1
 
+    # Configuration of Shedding for Botania.botania:pinkWither
+    S:"Botania.botania:pinkWither.item"=
+    I:"Botania.botania:pinkWither.lexiconDisplaySize"=40
+    I:"Botania.botania:pinkWither.metadata"=0
+    I:"Botania.botania:pinkWither.rate"=-1
+
     # Configuration of Shedding for Botania.botania:pixie
     S:"Botania.botania:pixie.item"=
     I:"Botania.botania:pixie.lexiconDisplaySize"=40
@@ -195,6 +210,12 @@ shedding {
     I:Chicken.lexiconDisplaySize=20
     I:Chicken.metadata=0
     I:Chicken.rate=26000
+
+    # Configuration of Shedding for ChromatiCraft.Ball Lightning
+    S:"ChromatiCraft.Ball Lightning.item"=
+    I:"ChromatiCraft.Ball Lightning.lexiconDisplaySize"=40
+    I:"ChromatiCraft.Ball Lightning.metadata"=0
+    I:"ChromatiCraft.Ball Lightning.rate"=-1
 
     # Configuration of Shedding for Cow
     S:Cow.item=
@@ -261,6 +282,10 @@ shedding {
     I:EvolvedZombie.lexiconDisplaySize=40
     I:EvolvedZombie.metadata=0
     I:EvolvedZombie.rate=-1
+    S:ExtrabiomesXL.scarecrow.item=
+    I:ExtrabiomesXL.scarecrow.lexiconDisplaySize=40
+    I:ExtrabiomesXL.scarecrow.metadata=0
+    I:ExtrabiomesXL.scarecrow.rate=-1
 
     # Configuration of Shedding for Forestry.butterflyGE
     S:Forestry.butterflyGE.item=
@@ -279,104 +304,70 @@ shedding {
     I:Giant.lexiconDisplaySize=40
     I:Giant.metadata=0
     I:Giant.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.AngryEnderman
     S:HardcoreEnderExpansion.AngryEnderman.item=
     I:HardcoreEnderExpansion.AngryEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.AngryEnderman.metadata=0
     I:HardcoreEnderExpansion.AngryEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.BabyEnderman
     S:HardcoreEnderExpansion.BabyEnderman.item=
     I:HardcoreEnderExpansion.BabyEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.BabyEnderman.metadata=0
     I:HardcoreEnderExpansion.BabyEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Dragon
     S:HardcoreEnderExpansion.Dragon.item=
     I:HardcoreEnderExpansion.Dragon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Dragon.metadata=0
     I:HardcoreEnderExpansion.Dragon.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderDemon
     S:HardcoreEnderExpansion.EnderDemon.item=
     I:HardcoreEnderExpansion.EnderDemon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderDemon.metadata=0
     I:HardcoreEnderExpansion.EnderDemon.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderEye
     S:HardcoreEnderExpansion.EnderEye.item=
     I:HardcoreEnderExpansion.EnderEye.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderEye.metadata=0
     I:HardcoreEnderExpansion.EnderEye.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderGuardian
     S:HardcoreEnderExpansion.EnderGuardian.item=
     I:HardcoreEnderExpansion.EnderGuardian.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderGuardian.metadata=0
     I:HardcoreEnderExpansion.EnderGuardian.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Endermage
     S:HardcoreEnderExpansion.Endermage.item=
     I:HardcoreEnderExpansion.Endermage.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Endermage.metadata=0
     I:HardcoreEnderExpansion.Endermage.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.FireFiend
     S:HardcoreEnderExpansion.FireFiend.item=
     I:HardcoreEnderExpansion.FireFiend.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireFiend.metadata=0
     I:HardcoreEnderExpansion.FireFiend.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.FireGolem
     S:HardcoreEnderExpansion.FireGolem.item=
     I:HardcoreEnderExpansion.FireGolem.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireGolem.metadata=0
     I:HardcoreEnderExpansion.FireGolem.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ForestGhost
     S:HardcoreEnderExpansion.ForestGhost.item=
     I:HardcoreEnderExpansion.ForestGhost.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ForestGhost.metadata=0
     I:HardcoreEnderExpansion.ForestGhost.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.HauntedMiner
     S:HardcoreEnderExpansion.HauntedMiner.item=
     I:HardcoreEnderExpansion.HauntedMiner.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HauntedMiner.metadata=0
     I:HardcoreEnderExpansion.HauntedMiner.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.HomelandEnderman
     S:HardcoreEnderExpansion.HomelandEnderman.item=
     I:HardcoreEnderExpansion.HomelandEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HomelandEnderman.metadata=0
     I:HardcoreEnderExpansion.HomelandEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.InfestedBat
     S:HardcoreEnderExpansion.InfestedBat.item=
     I:HardcoreEnderExpansion.InfestedBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.InfestedBat.metadata=0
     I:HardcoreEnderExpansion.InfestedBat.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Louse
     S:HardcoreEnderExpansion.Louse.item=
     I:HardcoreEnderExpansion.Louse.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Louse.metadata=0
     I:HardcoreEnderExpansion.Louse.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ParalyzedEnderman
     S:HardcoreEnderExpansion.ParalyzedEnderman.item=
     I:HardcoreEnderExpansion.ParalyzedEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ParalyzedEnderman.metadata=0
     I:HardcoreEnderExpansion.ParalyzedEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ScorchedLens
     S:HardcoreEnderExpansion.ScorchedLens.item=
     I:HardcoreEnderExpansion.ScorchedLens.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ScorchedLens.metadata=0
     I:HardcoreEnderExpansion.ScorchedLens.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.VampireBat
     S:HardcoreEnderExpansion.VampireBat.item=
     I:HardcoreEnderExpansion.VampireBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.VampireBat.metadata=0
@@ -1113,6 +1104,12 @@ shedding {
     I:Zombie.lexiconDisplaySize=40
     I:Zombie.metadata=0
     I:Zombie.rate=-1
+
+    # Configuration of Shedding for chisel.snowman
+    S:chisel.snowman.item=
+    I:chisel.snowman.lexiconDisplaySize=40
+    I:chisel.snowman.metadata=0
+    I:chisel.snowman.rate=-1
 
     # Configuration of Shedding for critterpet.Fire Beetle
     S:"critterpet.Fire Beetle.item"=
