--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -1,7 +1,9 @@
 # Configuration file
 
 "control setup" {
+    B:"Agressive Update Notification"=true
     B:"Console Loading Info"=true
+    B:"Custom/Donator Renders"=true
     B:"Debug Mode"=false
     B:"Disable Renders For Debug"=false
     B:"Increase sound channel count"=true
